Change in middleware logic, removal of 'administrators' index and show routes, removal of id return in creation path. Adaptation of integration testing and documentation to these changes.
