# src/routes/administratorRoutes.js
@@ -1,19 +1,14 @@
 const { Router } = require("express");
 const administratorController = require("../controllers/AdministratorController");
-const loginRequired = require("../middlewares/loginRequired");
+const Auth = require("../middlewares/Auth");
 const isYourself = require("../middlewares/isYourself");
 
 const router = new Router();
 
 router.post("/", administratorController.store);
-router.get("/", administratorController.index);
-router.get("/:id", administratorController.show);
-router.put("/:id", loginRequired, isYourself, administratorController.update);
-router.delete(
-  "/:id",
-  loginRequired,
-  isYourself,
-  administratorController.delete
-);
+// router.get("/", Auth, administratorController.index);
+// router.get("/:id", Auth, administratorController.show);
+router.put("/", Auth, isYourself, administratorController.update);
+router.delete("/", Auth, isYourself, administratorController.delete);
 
 module.exports = router;
