# src/swagger.json
@@ -99,75 +99,11 @@
           }
         }
       },
-      "get": {
-        "summary": "Search for administrators",
-        "description": "The route is responsible for searching all existing administrators in the application.",
-        "tags": ["Administrators"],
-        "security": [{ "bearerAuth": [] }],
-        "responses": {
-          "401": {
-            "description": "Unauthorized"
-          },
-          "200": {
-            "descriptin": "OK",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/Administrator"
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/administrators/{id}": {
-      "get": {
-        "summary": "Search for an administrator",
-        "description": "The route is responsible for searching only an existing administrator in the application.",
-        "tags": ["Administrators"],
-        "security": [{ "bearerAuth": [] }],
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "admin UUID",
-            "required": true
-          }
-        ],
-        "responses": {
-          "401": {
-            "description": "Unauthorized"
-          },
-          "200": {
-            "descriptin": "OK",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "$ref": "#/components/schemas/Administrator"
-                }
-              }
-            }
-          }
-        }
-      },
       "put": {
         "summary": "Change administrator data",
         "description": "This route is responsible for changing the administrator's data. Note: Only the administrator himself can change his data.",
         "tags": ["Administrators"],
         "security": [{ "bearerAuth": [] }],
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "admin UUID",
-            "required": true
-          }
-        ],
         "requestBody": {
           "content": {
             "application/json": {
@@ -211,14 +147,6 @@
         "description": "This route is responsible for deleting the administrator. Note: Only the administrator himself can delete your data.",
         "tags": ["Administrators"],
         "security": [{ "bearerAuth": [] }],
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "admin UUID",
-            "required": true
-          }
-        ],
         "responses": {
           "401": {
             "description": "Unauthorized"
@@ -441,10 +369,13 @@
           "email": {
             "type": "string"
           },
-          "password": {
+          "admin": {
+            "type": "boolean"
+          },
+          "updatedAt": {
             "type": "string"
           },
-          "id": {
+          "createdAt": {
             "type": "string"
           }
         }
